--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   
 
-      <link rel="stylesheet" href="css/style.css">
+      <link id = "mainCss" rel="stylesheet" href="css/style.css">
 
   
 </head>
