--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   		<div class="container">	
 			<div class="os-phrases" id="os-phrases">
 				<h2>16 Years ago</h2>
-				<h2>to hide</h2>
-				<h2>in order to</h2>
-				<h2>survive evil</h2>
+				<h2>random text</h2>
+				<h2>random text2</h2>
+				<h2>random text3</h2>
 				<h2>Effervescence</h2>
 				<h2>This September</h2>
 				<h2>We are back</h2>
