Remove online dependencies

--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
 <script src='http://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.6.1/jquery.lettering.min.js'></script>
 
     <script src="js/index.js"></script>
-      <script src='https://unpkg.com/rxcss@latest/dist/rxcss.min.js'></script>
-<script src='https://unpkg.com/@reactivex/rxjs/dist/global/Rx.min.js'></script>
-
+    <script src="js/seq1/r1.js"></script>
+    <script src="js/seq1/r2.js"></script>
     <script src="js/seq1/index.js"></script>
+
+
 
 </body>
 </html>
