--- a/index.html
+++ b/index.html
@@ -1,6 +1,46 @@
 <!DOCTYPE html>
 <html >
 <head>
+<style>
+.specialtext {
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+#text {
+  font-size: 90px;
+  font-family: Righteous;
+  text-transform: uppercase;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
+#fill {
+  -webkit-animation: shift 5s linear infinite;
+          animation: shift 5s linear infinite;
+}
+
+@-webkit-keyframes shift {
+  0% {
+    x: 0;
+  }
+  100% {
+    x: -2000;
+  }
+}
+
+@keyframes shift {
+  0% {
+    x: 0;
+  }
+  100% {
+    x: -2000;
+  }
+}
+</style>
   <meta charset="UTF-8">
   <title>Effervescence</title>
   <script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
@@ -31,6 +71,7 @@
 				<h2>For the best 3 days of your life</h2>
 			</div>
 		</div><!-- /container -->
+		<div class = "faer">  <button id ="lightsToggle" onclick=lightsOn()>Lights on/off</button><svg class="specialtext" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 750 200" preserveAspectRatio="xMidYMid meet" style="height:70%;width:70%"> <defs><filter id="texteffect"><feGaussianBlur in="SourceGraphic" stdDeviation="4"></feGaussianBlur><feComponentTransfer><feFuncA type="linear" slope="1.5" intercept="0"></feFuncA></feComponentTransfer><feComposite result="outer" in2="SourceGraphic" operator="out"></feComposite><feGaussianBlur result="pre-inner" in="SourceGraphic" stdDeviation="2"></feGaussianBlur><feComposite in="SourceGraphic" in2="pre-inner" operator="out"></feComposite><feComponentTransfer result="inner"><feFuncA type="linear" slope="7.5" intercept="0"></feFuncA></feComponentTransfer><feMerge><feMergeNode in="outer"></feMergeNode><feMergeNode in="inner"></feMergeNode></feMerge><feGaussianBlur stdDeviation="1"></feGaussianBlur></filter><linearGradient id="gradient" color-interpolation="sRGB" spreadMethod="repeat" x1="0" x2="0.5" y1="0.02" y2="0"><stop stop-color="#ef50d5" offset="0%"></stop><stop stop-color="#15f0f2" offset="33%"></stop><stop stop-color="#f2a415" offset="66%"></stop><stop stop-color="#ef50d5" offset="100%"></stop></linearGradient><mask id="textMask"><g filter="url(#texteffect)"><rect x="10" y="50" width="730" height="10" fill="#fff"></rect><rect x="10" y="170" width="830" height="10" fill="#fff"></rect><text id="text" x="375" y="150" text-anchor="middle" fill="#fff">Effervescence</text></g></mask></defs><rect id="fill" mask="url(#textMask)" fill="url(#gradient)" x="0" y="0" width="4000" height="200"></rect></svg></div>
   <script src='js/jquery.js'></script>
 <script src='js/lettering.js'></script>
 
@@ -60,7 +101,7 @@ jQuery(function($) {
     	[4800, 'text-shadow: 0 0 1px #fff;letter-spacing: 14px;opacity: 0.8;-webkit-transform: rotateY(0deg);'],[5000, 'text-shadow: 0 0 1px #fff;opacity: 0.8;transform: rotateY(0deg)translateZ(100px);'],
     	[6800, 'text-shadow: 0 0 10px #fff;opacity: 0; -webkit-transform: translateZ(130px);pointer-events: none']]);
 
-    setSkrollr($('#box2'), [[0, '-webkit-transform:translateX(-100%)'], [750, 'transform:translateX(100%)'], [1500, 'transform:translateX(-100%)']]);
+    setSkrollr($('.faer'), [[0, 'opacity:0'], [6000, 'opacity:0'],[6700, 'opacity:1']]);
     
     skrollr.init({
         smoothScrolling: false
