--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 #text {
   font-size: 90px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Open Sans';
   text-transform: uppercase;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
@@ -104,7 +104,8 @@
             <g filter="url(#texteffect)">
                <rect id="top-rect" x="10" y="50" width="730" height="10" fill="#fff"></rect>
                <rect id="bottom-rect" x="730" y="170" width="730" height="10" fill="#fff"></rect>
-               <text class="t1" id="text" x="50" y="150" text-anchor="middle" fill="#eee">E</text>
+               <text id="text" x="375" y="150" text-anchor="middle" fill="#fff">Effervescence</text>
+               <!-- <text class="t1" id="text" x="50" y="150" text-anchor="middle" fill="#eee">E</text>
                <text class="t2" id="text" x="100" y="150" text-anchor="middle" fill="#fff">f</text>
                <text class="t3" id="text" x="150" y="150" text-anchor="middle" fill="#fff">f</text>
                <text class="t4" id="text" x="210" y="150" text-anchor="middle" fill="#fff">e</text>
@@ -116,7 +117,7 @@
                <text class="t10" id="text" x="550" y="150" text-anchor="middle" fill="#fff">e</text>
                <text class="t11" id="text" x="610" y="150" text-anchor="middle" fill="#fff">n</text>
                <text class="t12" id="text" x="670" y="150" text-anchor="middle" fill="#fff">c</text>
-               <text class="t13" id="text" x="720" y="150" text-anchor="middle" fill="#fff">e</text>
+               <text class="t13" id="text" x="720" y="150" text-anchor="middle" fill="#fff">e</text> -->
 
             </g>
          </mask>
