EFFE title added

--- a/index.html
+++ b/index.html
@@ -888,7 +888,9 @@ jQuery(function($) {
     	[4400, 'text-shadow: 0 0 10px #fff;opacity: 0; -webkit-transform: translateZ(130px);pointer-events: none']]);
     setSkrollr($('.os-phrases h2:nth-child(5) > span > span > span'), [[4000, 'text-shadow: 0 0 50px#fff;letter-spacing: 80px;opacity: 0;-webkit-transform: rotateY(-90deg);'], 
     	[4400, 'text-shadow: 0 0 1px #fff;letter-spacing: 14px;opacity: 0.8;-webkit-transform: rotateY(0deg);'],[5000, 'text-shadow: 0 0 1px #fff;opacity: 0.8;transform: rotateY(0deg)translateZ(100px);'],
-    	[6000, 'text-shadow: 0 0 10px #fff;opacity: 0; -webkit-transform: translateZ(130px);pointer-events: none']]);
+    	[6000, 'text-shadow: 0 0 10px #fff;letter-spacing:80px;opacity: 0; -webkit-transform: translateZ(130px);pointer-events: none']]);
+    setSkrollr($('.os-phrases h2:nth-child(6) > span > span > span'), [[0, 'text-shadow: 0 0 1px#fff;letter-spacing: 14px;opacity: 0;-webkit-transform: rotateY(-90deg);'], [5000, 'text-shadow: 0 0 1px#fff;letter-spacing: 14px;opacity: 0;-webkit-transform: rotateY(-90deg);'], [6500, 'text-shadow: 0 0 50px#fff;letter-spacing: 80px;opacity: 0;-webkit-transform: rotateY(-90deg);'], 
+    	[6600, 'text-shadow: 0 0 1px #fff;letter-spacing: 40px;opacity: 0.8;-webkit-transform: rotateY(0deg);'],[7000, 'text-shadow: 0 0 1px #fff;opacity: 0.8;transform: rotateY(0deg)translateZ(100px);']]);
     setSkrollr($('#train'), [[0, 'left:-100vw;'], [1500, 'width:-100vw;'],[6000, 'left:-100vw;'],[6700, 'left:10vw;']]);
     setSkrollr($('#effe-L'), [[0, 'width:0%;'], [4500, 'width:0%;'],[6500, 'width:50%;'],[6700, 'width:100%;']]);
     setSkrollr($('#effe-T'), [[0, 'height:0%;'], [1500, 'height:50%;'],[6700, 'height:100%;']]);
@@ -897,17 +899,6 @@ jQuery(function($) {
 
  
     
-
-    // setSkrollr($('.faer'), [[0, 'opacity:0'], [6000, 'opacity:0;'],[6700, 'opacity:1;width:60%;']]);
-	setSkrollr($('.t1'), [[0, 'x:0;y:150;'], [6000, 'x:0;y:150;'],[6700, 'x:50;y:150;']]);
-    setSkrollr($('.t2'), [[0, 'x:0;y:150;'], [6000, 'x:200;y:150;'],[6700, 'x:100;y:150;']]);
-    setSkrollr($('.t3'), [[0, 'x:0;y:150;'], [6000, 'x:230;y:150;'],[6700, 'x:150;y:150;']]);
-    setSkrollr($('.t4'), [[0, 'x:0;y:150;'], [6000, 'x:390;y:150;'],[6700, 'x:210;y:150;']]);
-    setSkrollr($('.t5'), [[0, 'x:0;y:150;'], [6000, 'x:400;y:150;'],[6700, 'x:270;y:150;']]);
-    setSkrollr($('.t6'), [[0, 'x:0;y:150;'], [6000, 'x:410;y:150;'],[6700, 'x:320;y:150;']]);
-    setSkrollr($('.t7'), [[0, 'x:0;y:150;'], [6000, 'x:500;y:150;'],[6700, 'x:380;y:150;']]);
-    setSkrollr($('.t8'), [[0, 'x:0;y:150;'], [6000, 'x:20;y:150;'],[6700, 'x:430;y:150;']]);
-    setSkrollr($('.t9'), [[0, 'x:0;y:150;'], [6000, 'x:65;y:150;'],[6700, 'x:490;y:150;']]);
 
 
     
