--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
 				<h2>We are Back again</h2>
 				<h2>This September</h2>
 				<h2>Effervescence</h2>
+				<h2>Aditya Dewan<br>12345</h2>
+				<h2>Mudit Rathore<br>12345</h2>
+
 				<!-- <h2>This September</h2> -->
 				<!-- <h2>We are back</h2> -->
 				<!-- <h2>For the best 3 days of your life</h2> -->
@@ -892,7 +895,7 @@ jQuery(function($) {
     setSkrollr($('.os-phrases h2:nth-child(6) > span > span > span'), [[0, 'text-shadow: 0 0 1px#fff;letter-spacing: 14px;opacity: 0;-webkit-transform: rotateY(-90deg);'], [5000, 'text-shadow: 0 0 1px#fff;letter-spacing: 14px;opacity: 0;-webkit-transform: rotateY(-90deg);'], [6500, 'text-shadow: 0 0 50px#fff;letter-spacing: 80px;opacity: 0;-webkit-transform: rotateY(-90deg);'], 
     	[6600, 'text-shadow: 0 0 1px #fff;letter-spacing: 40px;opacity: 0.8;-webkit-transform: rotateY(0deg);'],[7000, 'text-shadow: 0 0 1px #fff;opacity: 0.8;transform: rotateY(0deg)translateZ(100px);']]);
     setSkrollr($('#train'), [[0, 'left:-100vw;'], [1500, 'width:-100vw;'],[6000, 'left:-100vw;'],[6700, 'left:10vw;']]);
-    setSkrollr($('#effe-L'), [[0, 'width:0%;'], [4500, 'width:0%;'],[6500, 'width:50%;'],[6700, 'width:100%;']]);
+    setSkrollr($('#effe-L'), [[0, 'left:50%;width:0%;-webkit-transform:translateX(0%);'], [4500, 'width:0%;-webkit-transform:translateX(0%);'],[6500, 'width:50%;-webkit-transform:translateX(-50%);'],[6700, 'width:100%;-webkit-transform:translateX(-50%);']]);
     setSkrollr($('#effe-T'), [[0, 'height:0%;'], [1500, 'height:50%;'],[6700, 'height:100%;']]);
 
 
