--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				<h2>This September</h2>
 				<h2>Effervescence</h2>
 				<h2>Aditya Dewan<br>12345</h2>
-				<h2>Mudit Rathore<br>12345</h2>
+				<h2>Effe is Coming. Hold tight.</h2>
 
 				<!-- <h2>This September</h2> -->
 				<!-- <h2>We are back</h2> -->
