--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
    xmlns:svg="http://www.w3.org/2000/svg"
    xmlns="http://www.w3.org/2000/svg"
    version="1.1"
-   width="60vw"
-   height="500"
+   width="80%"
+   height="450"
    id="train"
     viewBox="0 0 1820 600"
    onload="init(evt)">
@@ -896,7 +896,7 @@ jQuery(function($) {
     	[6600, 'text-shadow: 0 0 1px #fff;letter-spacing: 40px;opacity: 0.8;-webkit-transform: rotateY(0deg);'],[7000, 'text-shadow: 0 0 1px #fff;opacity: 0.8;transform: rotateY(0deg)translateZ(100px);']]);
     setSkrollr($('.os-phrases h2:nth-child(7) > span > span > span'), [[0, 'text-shadow: 0 0 1px#fff;letter-spacing: 14px;opacity: 0;-webkit-transform: rotateY(-90deg);'], [5000, 'text-shadow: 0 0 1px#fff;letter-spacing: 14px;opacity: 0;-webkit-transform: rotateY(-90deg);'], [6500, 'text-shadow: 0 0 50px#fff;letter-spacing: 80px;opacity: 0;-webkit-transform: rotateY(-90deg);'], 
     	[6600, 'text-shadow: 0 0 1px #fff;letter-spacing: 40px;opacity: 0.8;-webkit-transform: rotateY(0deg);'],[7000, 'text-shadow: 0 0 1px #fff;opacity: 0.8;transform: rotateY(0deg)translateZ(100px);']]);
-    setSkrollr($('#train'), [[0, 'left:-140vw;'], [1500, 'left:-100vw;'],[6000, 'left:-100vw;'],[6700, 'left:10vw;']]);
+    setSkrollr($('#train'), [[0, 'left:-140vw;opacity:0;'], [1500, 'left:-100vw;opacity:0;'],[6000, 'left:-100vw;opacity:0.5;'],[6700, 'left:1vw;opacity:1;']]);
     setSkrollr($('#effe-L'), [[0, 'left:50%;width:0%;-webkit-transform:translateX(0%);transform:translateX(0%);'], [4500, 'width:0%;-webkit-transform:translateX(0%);transform:translateX(0%);'],[6500, 'width:50%;-webkit-transform:translateX(-50%);transform:translateX(-50%);'],[6700, 'width:100%;-webkit-transform:translateX(-50%);transform:translateX(-50%);']]);
     setSkrollr($('#effe-T'), [[0, 'height:0%;'], [1500, 'height:50%;'],[6700, 'height:100%;']]);
 
