--- a/index.html
+++ b/index.html
@@ -860,13 +860,85 @@
 
   <script src='js/jquery.js'></script>
 <script src='js/lettering.js'></script>
-
+<script src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.17/p5.js"></script>
     <script src="js/index.js"></script>
     <script src="js/seq1/r1.js"></script>
     <script src="js/seq1/r2.js"></script>
     <script src="js/seq1/index.js"></script>
     <script src="js/skrollr.js"></script>
+<script type="text/javascript">
+	var theta = 0,
+  step = 0,
+  f = 500,
+  num = 6;
+var layers = [];
 
+function setup() {
+  createCanvas(windowWidth, windowHeight - 4);
+  colorMode(HSB, 360, 100, 100);
+  step = (height - 200) / num;
+  createScenery();
+}
+
+function draw() {
+  background('#ffffff');
+  for (var i = 0; i < layers.length; i++) {
+    var br = map(i, 0, layers.length - 1, 20, 90);
+    fill(f, br, 100);
+    layers[i].display();
+  }
+  fill(0);
+  textAlign(RIGHT);
+  text("click mouse to change scenery", width - 10, 15);
+  text("type key to change color", width - 10, 30);
+  theta += 0.002;
+  println(frameRate());
+}
+
+function createScenery() {
+  for (var i = 0; i < num; i++) {
+    layers.push(new Layer(-20 + i * step, random(1000), i + 0.5));
+  }
+}
+
+function Layer(_start, _noize, _speed) {
+
+  var yOff = 0,
+    yOff2 = 0;
+  var start = _start;
+  var noize = _noize;
+  var speed = _speed;
+
+  this.display = function() {
+    yOff = yOff2;
+    noStroke();
+    beginShape();
+    vertex(0, height);
+    for (var x = 0; x < width; x += 3) {
+      var y = start + noise(noize + sin(yOff) * 3) * step * 3.5;
+      vertex(x, y);
+      yOff += TWO_PI / (width);
+    }
+    vertex(width, height);
+    endShape();
+    yOff2 = theta * speed;
+  }
+}
+
+function mouseReleased() {
+  layers = [];
+  background(255);
+  createScenery();
+}
+
+function keyReleased() {
+  f = random(250, 360);
+}
+
+function windowResized() {
+  resizeCanvas(windowWidth, windowHeight - 4);
+}
+</script>
 <script id='letter-script'>
 var setSkrollr = function($el, data) {
     for (var i = 0, l = data.length; i < l; i++) {
