added more trees

--- a/index.html
+++ b/index.html
@@ -67,8 +67,14 @@
 <div id="tree-2"></div>
 <div id="tree-3"></div>
 <div id="tree-4"></div>
-<div id="sponsor"></div>
+<div id="tree-5"></div>
+<div id="tree-6"></div>
+<div id="tree-7"></div>
+<div id="tree-8"></div>
+<div id="tree-9"></div>
+
 </div>
+<div id="sponsor"></div>
 
 <!-- <div id="effe-T"></div> -->
 <!-- <div id="effe-B1"></div> -->
@@ -96,7 +102,7 @@
    xmlns="http://www.w3.org/2000/svg"
    version="1.1"
    width="80%"
-   height="450"
+   height="50vh"
    id="train"
     viewBox="0 0 1820 600"
    onload="init(evt)">
@@ -912,8 +918,15 @@ jQuery(function($) {
     setSkrollr($('#tree-2'), [[0, 'opacity:0;'], [6500, 'opacity:0;'],[6700, 'opacity:1;']]);
     setSkrollr($('#tree-3'), [[0, 'opacity:0;'], [6500, 'opacity:0;'],[6700, 'opacity:1;']]);
     setSkrollr($('#tree-4'), [[0, 'opacity:0;'], [6500, 'opacity:0;'],[6700, 'opacity:1;']]);
+    setSkrollr($('#tree-5'), [[0, 'opacity:0;'], [6500, 'opacity:0;'],[6700, 'opacity:1;']]);
+    setSkrollr($('#tree-6'), [[0, 'opacity:0;'], [6500, 'opacity:0;'],[6700, 'opacity:1;']]);
+    setSkrollr($('#tree-7'), [[0, 'opacity:0;'], [6500, 'opacity:0;'],[6700, 'opacity:1;']]);
+    setSkrollr($('#tree-8'), [[0, 'opacity:0;'], [6500, 'opacity:0;'],[6700, 'opacity:1;']]);
+    setSkrollr($('#tree-9'), [[0, 'opacity:0;'], [6500, 'opacity:0;'],[6700, 'opacity:1;']]);
 
-    setSkrollr($('#trees'), [[0, ''], [6600, 'animation:dont 1s linear'],[6700, 'animation:travel 10s linear infinite;']]);
+
+
+    setSkrollr($('#trees'), [[0, ''], [6600, 'animation:dont 1s linear'],[6700, 'animation:travel 5s linear infinite;']]);
     skrollr.init({
         smoothScrolling: false
     });
