--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
 
 <body>
 <div id="effe-L" class="cntered"></div>
+<div id="benny" ></div>
+<div id="benny2"></div>
 <div id="clouds"></div>
 <div id="trees">
 <div id="tree-1"></div>
@@ -102,7 +104,7 @@
    xmlns="http://www.w3.org/2000/svg"
    version="1.1"
    width="80%"
-   height="50vh"
+   height="42vh"
    id="train"
     viewBox="0 0 1820 600"
    onload="init(evt)">
@@ -913,6 +915,9 @@ jQuery(function($) {
     	[6600, 'text-shadow: 0 0 1px #fff;letter-spacing: 40px;opacity: 0.8;-webkit-transform: rotateY(0deg);'],[7000, 'text-shadow: 0 0 1px #fff;opacity: 0.8;transform: rotateY(0deg)translateZ(100px);']]);
     setSkrollr($('#train'), [[0, 'left:-100%;opacity:0;'], [1500, 'left:-100%;opacity:0;'],[6000, 'left:-100%;opacity:0;'],[6700, 'left:10%;opacity:1;']]);
     setSkrollr($('#effe-L'), [[0, 'left:50%;width:0%;-webkit-transform:translateX(0%);transform:translateX(0%);'], [4500, 'width:0%;-webkit-transform:translateX(0%);transform:translateX(0%);'],[6500, 'width:50%;-webkit-transform:translateX(-50%);transform:translateX(-50%);'],[6700, 'width:100%;-webkit-transform:translateX(-50%);transform:translateX(-50%);']]);
+    setSkrollr($('#benny'), [[0, 'left:0%;width:0%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0;'],[3000, 'left:0%;width:0%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0;'], [3500, 'width:40%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0.7;'],[4000, 'width:50%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0.8'],[5000, 'width:100%;-webkit-transform:translateX(-50%);transform:translateX(-50%);opacity:0;']]);
+    setSkrollr($('#benny2'), [[0, 'left:100%;width:0%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0;'], [3000, 'left:100%;width:0%;-webkit-transform:translateX(0%);transform:translateX(0%);opacity:0;'], [4000, 'width:40%;-webkit-transform:translateX(0%);transform:translateX(-50%);opacity:0.7;'],[4000, 'width:50%;-webkit-transform:translateX(-100%);transform:translateX(-100%);opacity:0.8'],[4500, 'width:100%;-webkit-transform:translateX(-100%);transform:translateX(-100%);opacity:0;']]);
+
     setSkrollr($('#effe-T'), [[0, 'height:0%;'], [1500, 'height:50%;'],[6700, 'height:100%;']]);
     setSkrollr($('#tree-1'), [[0, 'opacity:0;'], [6500, 'opacity:0;'],[6700, 'opacity:1;']]);
     setSkrollr($('#tree-2'), [[0, 'opacity:0;'], [6500, 'opacity:0;'],[6700, 'opacity:1;']]);
